--- a/pom.xml
+++ b/pom.xml
@@ -7,12 +7,23 @@
   <version>1.0-SNAPSHOT</version>
   <name>DockerExample Maven Webapp</name>
   <url>http://maven.apache.org</url>
+  <repository>
+    <id>project-common</id>
+    <name>Project Common</name>
+    <url>https://github.com/phippela/mvn-repo/raw/master/</url>
+  </repository>
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>3.8.1</version>
       <scope>test</scope>
+    </dependency>
+    <dependency>
+        <groupId>javax.servlet</groupId>
+        <artifactId>servlet-api</artifactId>
+        <version>2.5</version>
+        <scope>provided</scope>
     </dependency>
   </dependencies>
   <build>
