--- a/pom.xml
+++ b/pom.xml
@@ -7,13 +7,13 @@
   <version>1.0-SNAPSHOT</version>
   <name>DockerExample Maven Webapp</name>
   <url>http://maven.apache.org</url>
-  <repository>
+<!--  <repository>
     <id>project-common</id>
     <name>Project Common</name>
     <url>https://github.com/phippela/mvn-repo/raw/master/</url>
-  </repository>
+  </repository>-->
   <dependencies>
-    <dependency>
+  <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>3.8.1</version>
