--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>com.mikechernev.docker.example</groupId>
+  <groupId>PowerParser</groupId>
   <artifactId>DockerExample</artifactId>
   <packaging>war</packaging>
   <version>1.0-SNAPSHOT</version>
@@ -25,8 +25,73 @@
         <version>2.5</version>
         <scope>provided</scope>
     </dependency>
+    <dependency>
+    <groupId>anna</groupId>
+    <artifactId>anna</artifactId>
+    <version>3.61</version>
+    <scope>system</scope>
+    <systemPath>${project.basedir}/src/main/webapp/WEB-INF/lib/anna-3.61.jar</systemPath>
+    </dependency>
+    <dependency>
+    <groupId>marmot</groupId>
+    <artifactId>marmot</artifactId>
+    <version>1.0</version>
+    <scope>system</scope>
+    <systemPath>${project.basedir}/src/main/webapp/WEB-INF/lib/marmot.jar</systemPath>
+    </dependency>
+    <dependency>
+  <groupId>marmot2014</groupId>
+  <artifactId>marmot-2014</artifactId>
+  <version>2.0</version>
+  <scope>system</scope>
+  <systemPath>${project.basedir}/src/main/webapp/WEB-INF/lib/marmot-2014-10-22.jar</systemPath>
+  </dependency>
+  <dependency>
+    <groupId>hfst</groupId>
+    <artifactId>hfst-ol</artifactId>
+    <version>1.0</version>
+    <scope>system</scope>
+    <systemPath>${project.basedir}/src/main/webapp/WEB-INF/lib/hfst-ol.jar</systemPath>
+  </dependency>
+  <dependency>
+    <groupId>jwnl</groupId>
+    <artifactId>jwnl</artifactId>
+    <version>1.3.3</version>
+    <scope>system</scope>
+    <systemPath>${project.basedir}/src/main/webapp/WEB-INF/lib/jwnl-1.3.3.jar</systemPath>
+  </dependency>
+  <dependency>
+    <groupId>opennlp</groupId>
+    <artifactId>opennlp-maxent</artifactId>
+    <version>3.0.3</version>
+    <scope>system</scope>
+    <systemPath>${project.basedir}/src/main/webapp/WEB-INF/lib/opennlp-maxent-3.0.3.jar</systemPath>
+  </dependency>
+  <dependency>
+    <groupId>opennlp</groupId>
+    <artifactId>opennlp-tools</artifactId>
+    <version>1.5.3</version>
+    <scope>system</scope>
+    <systemPath>${project.basedir}/src/main/webapp/WEB-INF/lib/opennlp-tools-1.5.3.jar</systemPath>
+  </dependency>
+  <dependency>
+    <groupId>opennlp</groupId>
+    <artifactId>opennlp-uima</artifactId>
+    <version>1.5.3</version>
+    <scope>system</scope>
+    <systemPath>${project.basedir}/src/main/webapp/WEB-INF/lib/opennlp-uima-1.5.3.jar</systemPath>
+  </dependency>
+  <!--
+  <dependency>
+    <groupId>sample</groupId>
+    <artifactId>com.sample</artifactId>
+    <version>1.0</version>
+    <scope>system</scope>
+    <systemPath>${project.basedir}/src/main/webapp/WEB-INF/lib/oma.jar</systemPath>
+  </dependency>
+-->
   </dependencies>
   <build>
-    <finalName>DockerExample</finalName>
+    <finalName>PowerParser</finalName>
   </build>
 </project>
